fix: dark mode toggle

--- a/src/app.css
+++ b/src/app.css
@@ -12,3 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body {
+  @apply text-black dark:text-white;
+}
